@@ -150,13 +150,13 @@ public class SaveService {
     
     // Must match _version property value in saveservice.properties
     // used to ensure saveservice.properties and SaveService are updated simultaneously
-    static final String PROPVERSION = "4.1";// Expected version $NON-NLS-1$
+    static final String PROPVERSION = "5.0";// Expected version $NON-NLS-1$
 
     // Internal information only
     private static String fileVersion = ""; // computed from saveservice.properties file// $NON-NLS-1$
     // Must match the sha1 checksum of the file saveservice.properties (without newline character),
     // used to ensure saveservice.properties and SaveService are updated simultaneously
-    static final String FILEVERSION = "0c2f8af0f246d61a8288ad502a6d197a75d4d48a"; // Expected value $NON-NLS-1$
+    static final String FILEVERSION = "e922e4aa06ed9f253d68c13f445d5bfedaccd876"; // Expected value $NON-NLS-1$
 
     private static String fileEncoding = ""; // read from properties file// $NON-NLS-1$
 
@@ -203,7 +203,7 @@ public class SaveService {
 
     private static String getChecksumForPropertiesFile()
             throws NoSuchAlgorithmException, IOException {
-        MessageDigest md = MessageDigest.getInstance("SHA1");
+        MessageDigest md = MessageDigest.getInstance("SHA-1");
         File saveServiceFile = getSaveServiceFile();
         try (BufferedReader reader = 
                 Files.newBufferedReader(saveServiceFile.toPath(), Charset.defaultCharset())) {
@@ -243,26 +243,25 @@ public class SaveService {
                         log.info("Using SaveService properties file encoding {}", fileEncoding);
                     } else {
                         key = key.substring(1);// Remove the leading "_"
-                        try {
-                            final String trimmedValue = val.trim();
-                            if (trimmedValue.equals("collection") // $NON-NLS-1$
-                             || trimmedValue.equals("mapping")) { // $NON-NLS-1$
-                                registerConverter(key, JMXSAVER, true);
-                                registerConverter(key, JTLSAVER, true);
-                            } else {
-                                registerConverter(key, JMXSAVER, false);
-                                registerConverter(key, JTLSAVER, false);
-                            }
-                        } catch (IllegalAccessException | InstantiationException | ClassNotFoundException | IllegalArgumentException|
-                                SecurityException | InvocationTargetException | NoSuchMethodException e1) {
-                            log.warn("Can't register a converter: {}", key, e1);
-                        }
+                        registerConverter(key, val);
                     }
                 }
             }
         } catch (IOException e) {
             log.error("Bad saveservice properties file", e);
             throw new JMeterError("JMeter requires the saveservice properties file to continue");
+        }
+    }
+
+    private static void registerConverter(String key, String val) {
+        try {
+            final String trimmedValue = val.trim();
+            boolean useMapper = "collection".equals(trimmedValue) || "mapping".equals(trimmedValue); // $NON-NLS-1$ $NON-NLS-2$
+            registerConverter(key, JMXSAVER, useMapper);
+            registerConverter(key, JTLSAVER, useMapper);
+        } catch (IllegalAccessException | InstantiationException | ClassNotFoundException | IllegalArgumentException|
+                SecurityException | InvocationTargetException | NoSuchMethodException e1) {
+            log.warn("Can't register a converter: {}", key, e1);
         }
     }
 
@@ -283,11 +282,9 @@ public class SaveService {
             InvocationTargetException, NoSuchMethodException,
             ClassNotFoundException {
         if (useMapper){
-            jmxsaver.registerConverter((Converter) Class.forName(key).getConstructor(
-                    new Class[] { Mapper.class }).newInstance(
-                            new Object[] { jmxsaver.getMapper() }));
+            jmxsaver.registerConverter((Converter) Class.forName(key).getConstructor(Mapper.class).newInstance(jmxsaver.getMapper()));
         } else {
-            jmxsaver.registerConverter((Converter) Class.forName(key).newInstance());
+            jmxsaver.registerConverter((Converter) Class.forName(key).getDeclaredConstructor().newInstance());
         }
     }
 
@@ -344,7 +341,7 @@ public class SaveService {
      * @throws IOException when writing data to output fails
      */
     // Used by ResultCollector.sampleOccurred(SampleEvent event)
-    public synchronized static void saveSampleResult(SampleEvent evt, Writer writer) throws IOException {
+    public static synchronized void saveSampleResult(SampleEvent evt, Writer writer) throws IOException {
         DataHolder dh = JTLSAVER.newDataHolder();
         dh.put(SAMPLE_EVENT_OBJECT, evt);
         // This is effectively the same as saver.toXML(Object, Writer) except we get to provide the DataHolder
@@ -536,11 +533,8 @@ public class SaveService {
      * @return string with details of error
      */
     public static String CEtoString(ConversionException ce){
-        String msg =
-            "XStream ConversionException at line: " + ce.get("line number")
-            + "\n" + ce.get("message")
-            + "\nPerhaps a missing jar? See log file.";
-        return msg;
+        return "XStream ConversionException at line: " + ce.get("line number") + "\n" + ce.get("message")
+                + "\nPerhaps a missing jar? See log file.";
     }
 
     public static String getPropertiesVersion() {
